<resources>
    <string name="google_api_key_maps" translatable="false">AIzaSyA5Qu9k0eWqdJMHlk2CwUiAPBV3lJ3jHyI</string>

    <string name="app_name">Sweed</string>
    <string name="login">Login</string>
    <string name="registraion">Registration</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="faq">FAQ</string>
    <string name="recover_pass">Recover password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email_sent">Email with a password sent on %s</string>
    <string name="profile">Profile</string>
    <string name="start_working_day">Start working day</string>
    <string name="break_string">Break</string>
    <string name="time">Time</string>
    <string name="end_workday">End workday</string>
    <string name="continue_string">Continue</string>
    <string name="my_requests">My Requests</string>
    <string name="application_number">Application number</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="express">Express</string>
    <string name="address">Address</string>
    <string name="miles">Miles</string>
    <string name="travel_time">Travel time</string>
    <string name="web_page">Web page</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="number_of_orders_per_day">Number of orders per day</string>
    <string name="average_delivery_time">Average delivery time</string>
    <string name="revenue_per_day">Revenue per day</string>
    <string name="wait_for_approval_from_the_operator">Wait for approval from the operator</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="please_sign">Please\nsign</string>
    <string name="order_price">Order price</string>
    <string name="card_number">Card number</string>
    <string name="scan_the_qr_code">Scan the QR code</string>
    <string name="regular_delivery">Regular delivery</string>
    <string name="filter">Filter</string>
    <string name="status">Status</string>
    <string name="next">Next</string>
    <string name="about_order">About order</string>
    <string name="order_status">Order status</string>
    <string name="passport_photo">Passport photo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cancel_an_order">Cancel an order</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="camera_perm_hint">Cannot scan code without camera permission</string>
    <string name="success_scan">Successfully</string>
    <string name="fail_scan">Fail</string>
    <string name="repeat">Repeat</string>
    <string name="place_the_bar_code_in_the_center">Place the bar code in the center</string>
    <string name="perm_loc_needed">Need location permission</string>
    <string name="product_list">Product list</string>
    <string name="no_requests">There are no requests yet</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
</resources>
