<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="#032e52"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:text="@string/end_workday"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="#273d52"
                android:textSize="16sp"
                android:text="@string/time"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:textColor="#032e52"
                android:textSize="17sp"
                android:text="00:00"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="#e2e9ea" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="#273d52"
                android:textSize="16sp"
                android:text="@string/break_string"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/breakItem"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:textColor="#032e52"
                android:textSize="17sp"
                android:text="00:00"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="#e2e9ea" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="#273d52"
                android:textSize="16sp"
                android:text="@string/number_of_orders_per_day"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberOfOrdersPerDay"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:textColor="#032e52"
                android:textSize="17sp"
                android:text="0"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="#e2e9ea" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="#273d52"
                android:textSize="16sp"
                android:text="@string/average_delivery_time"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/averageDeliveryTime"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:textColor="#032e52"
                android:textSize="17sp"
                android:text="00:00"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="#e2e9ea" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="#273d52"
                android:textSize="16sp"
                android:text="@string/revenue_per_day"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/revenuePerDay"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:textColor="#032e52"
                android:textSize="17sp"
                android:text="$0"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="#e2e9ea" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waitView"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_horizontal"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#273d52"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/wait_for_approval_from_the_operator"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonView"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_horizontal"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/onComplete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="69dp"
            android:layout_marginRight="69dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom"
            android:text="@string/complete"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="16sp"
            android:background="@drawable/button_bg_dark"/>

        <Button
            android:id="@+id/onCancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="69dp"
            android:layout_marginRight="69dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom"
            android:text="@string/cancel"
            android:textColor="#273d52"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="16sp"
            android:background="@null"/>
    </LinearLayout>

</RelativeLayout>
