<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fcfcfc"
    android:fitsSystemWindows="true"
    tools:context="com.iterika.walli.presentation.faq.FaqDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingBottom="0dp">

        <ImageView
            android:id="@+id/onBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:tint="#032e52"
            android:layout_marginLeft="16dp"
            android:layout_gravity="bottom"
            android:src="@drawable/back"/>

        <TextView
            android:id="@+id/onClear"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="#273d52"
            android:layout_marginRight="16dp"
            android:layout_gravity="right|center_vertical"
            android:text="@string/clear"
            android:singleLine="true"
            android:ellipsize="end"
            android:padding="5dp"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:textColor="#032e52"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_sign"
        android:layout_height="wrap_content" />

    <com.simplify.ink.InkView
        android:id="@+id/ink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:layout_width="match_parent"
        app:optRoundCardCornerRadius="10dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false"
        app:optRoundCardElevation="5dp"
        app:optRoundCardBackgroundColor="#fff"
        app:optRoundCardMaxElevation="5dp"
        app:optRoundContentPadding="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#273d52"
                    android:textSize="16sp"
                    android:text="@string/order_price"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/orderPrice"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:textColor="#032e52"
                    android:textSize="17sp"
                    android:text="$150"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#273d52"
                    android:textSize="16sp"
                    android:text="@string/card_number"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/cardNumber"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:textColor="#032e52"
                    android:textSize="17sp"
                    android:text="****0000"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <Button
                android:id="@+id/onNext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="69dp"
                android:layout_marginRight="69dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="bottom"
                android:text="@string/next"
                android:textColor="#273d52"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="16sp"
                android:background="@drawable/button_bg_bordered"/>
        </LinearLayout>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>



</LinearLayout>
